--- a/part9-C/server/package.json
+++ b/part9-C/server/package.json
@@ -19,9 +19,11 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "D": "^1.0.0",
     "express": "^4.21.2",
-    "ts-standard": "^12.0.2"
+    "ts-standard": "^12.0.2",
+    "uuid": "^11.0.3"
   },
   "eslintConfig": {
     "parserOptions": {
