--- a/part9-C/server/package.json
+++ b/part9-C/server/package.json
@@ -15,10 +15,13 @@
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^9.17.0",
-    "ts-node-dev": "^2.0.0",
+    "ts-node-dev": "2.0.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
     "cors": "^2.8.5",
     "D": "^1.0.0",
     "express": "^4.21.2",
