--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rate-repository-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.4",
     "expo": "~52.0.23",
+    "expo-constants": "^17.0.4",
+    "expo-linking": "^7.0.4",
+    "expo-router": "^4.0.16",
     "expo-status-bar": "~2.0.0",
+    "formik": "^2.4.6",
+    "lodash-es": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-web": "~0.19.13"
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-web": "~0.19.13",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
